bug 16940 - Last.fm transparent overlay does not extend past visible area
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@14092 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/extensions/lastfm/chrome/skin/tuner2.css
+++ b/extensions/lastfm/chrome/skin/tuner2.css
@@ -27,6 +27,11 @@ div.lightbox-bkg {
 	z-index: 501;
 }
 
+div#wrapper-box {
+  position: relative;
+  height: 100%;
+}
+
 div#login-box, div#subscriber-box {
 	position: absolute;
 	width: 100%;
